align fix

--- a/public/index.css
+++ b/public/index.css
@@ -36,6 +36,7 @@ h2 {
 .dropdown {
     position: relative;
     display: inline-block;
+    margin: 10px;
 }
 
 .dropdown-content {
@@ -43,7 +44,6 @@ h2 {
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0,2);
     z-index: 1;
 }
 
@@ -69,6 +69,7 @@ h2 {
 .weightbox {
     display: block;
     padding: 5px;
+    margin-top: 1px;
 }
 
 .submitbutton {
